# myllm

./: .gitignore  README.md  pyproject.toml
scripts/: chat.bat  chat.py  download_fineweb.bat  download_fineweb.py  generate_synthetic.bat  generate_synthetic.py  large_train.bat  run_small_cpu.bat  run_training.bat  small_train.bat  tiny_train.bat
src/myllm/: __init__.py  cli.py  config.py  data.py  model.py  tokenizer.py  trainer.py  utils.py
src/myllm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
