[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myllm"
version = "0.1.0"
description = "GPT-1 style training toolkit"
authors = [{name = "Your Name"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "sentencepiece>=0.1.99",
    "numpy>=1.24.0"
]

[tool.setuptools.packages.find]
where = ["src"]
